# MicrosoftSmart

MicrofinanceSmart/: README.md  pyproject.toml  touch package.json
MicrofinanceSmart/backend/: app.py  config.py  main.py  models.py
MicrofinanceSmart/backend/routes/: admin_routes.py  auth_routes.py  client_routes.py  dashboard_routes.py
MicrofinanceSmart/backend/services/: excel_processor.py  ml_service.py  twilio_service.py
MicrofinanceSmart/frontend/: package.json
MicrofinanceSmart/frontend/public/: index.html
MicrofinanceSmart/frontend/src/: App.js  index.js
MicrofinanceSmart/frontend/src/components/: ErrorBoundary.js
MicrofinanceSmart/frontend/src/components/auth/: Login.js  Register.js
MicrofinanceSmart/frontend/src/components/common/: Navbar.js  Sidebar.js
MicrofinanceSmart/frontend/src/components/dashboard/: # VS Code workspace files.md  AdminDashboard.js  ClientDashboard.js  DataVisualization.js  FinancialMetrics.js
MicrofinanceSmart/frontend/src/components/excel/: FileUpload.js
MicrofinanceSmart/frontend/src/components/messaging/: MessageCenter.js
MicrofinanceSmart/frontend/src/services/: api.js  auth.js
MicrofinanceSmart/frontend/src/styles/: main.css
MicrofinanceSmart/templates/: admin_dashboard.html  client_dashboard.html  home.html  index.html  login.html  register.html
MicrofinanceSmart/touch tests/: test_app.js
MicrofinanceSmart/uploads/: Agent Commission July 2024.xlsx
