[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=5.0.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "twilio>=9.5.1",
    "flask-login>=0.6.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "openpyxl>=3.1.5",
    "flask-wtf>=1.2.2",
    "werkzeug>=3.1.3",
    "openai>=1.70.0",
    "trafilatura>=2.0.0",
]
